--- a/src/views/login-comparison.html
+++ b/src/views/login-comparison.html
@@ -349,8 +349,12 @@
         </div>
         
         <div style="text-align: center; margin-top: 40px; padding-top: 20px; border-top: 1px solid rgba(255, 255, 255, 0.1);">
-            <a href="/portal.html" style="color: #7877c6; text-decoration: none; font-weight: 600;">
-                🏠 Back to Login Portal
+            <a href="/login.html" style="color: #7877c6; text-decoration: none; font-weight: 600;">
+                🏠 Back to User Login
+            </a>
+            &nbsp;&nbsp;|&nbsp;&nbsp;
+            <a href="/admin-login.html" style="color: #dc3545; text-decoration: none; font-weight: 600;">
+                🔧 Admin Login
             </a>
         </div>
     </div>
